[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://BoldLabelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TopBar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.501961 )

[node name="TopBar" type="PanelContainer"]
margin_right = 1090.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
margin_right = 1090.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="hbox" type="HBoxContainer" parent="margin"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1088.0
margin_bottom = 34.0
mouse_filter = 2
alignment = 1

[node name="pollution_label" type="Label" parent="margin/hbox"]
margin_top = 8.0
margin_right = 61.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Pollution:"

[node name="pollution_value_label" type="Label" parent="margin/hbox"]
margin_left = 65.0
margin_top = 8.0
margin_right = 333.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0 (0%)"

[node name="sep1" type="VSeparator" parent="margin/hbox"]
margin_left = 337.0
margin_right = 341.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="resources_label" type="Label" parent="margin/hbox"]
margin_left = 345.0
margin_top = 8.0
margin_right = 484.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Remaining Resources:"

[node name="resources_value_label" type="Label" parent="margin/hbox"]
margin_left = 488.0
margin_top = 8.0
margin_right = 756.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "10000 (100%)"

[node name="sep2" type="VSeparator" parent="margin/hbox"]
margin_left = 760.0
margin_right = 764.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="money_label" type="Label" parent="margin/hbox"]
margin_left = 768.0
margin_top = 8.0
margin_right = 814.0
margin_bottom = 23.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Money:"

[node name="money_value_label" type="Label" parent="margin/hbox"]
margin_left = 818.0
margin_top = 8.0
margin_right = 1086.0
margin_bottom = 23.0
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
